# Hybrid-Iris-Recognition

./: .gitignore  main.py  main2.py  pyproject.toml
GDrive/: __init__.py  list.py  up_download.py  up_downv2.py
biometric_iris/: __init__.py  test_file.py  utils.py
db/: CASIA-Iris-Thousandv2.csv  link.txt
fractal/: __init__.py  fractal.py
keras/: model.py
my_keras/: model.py
preprocess/: segmentation.py
roboflow/: inference.py
