[project]
name = "hybrid-iris-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inference-sdk>=0.12.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pydot>=4.0.1",
    "scikit-image>=0.26.0",
    "tensorflow>=2.21.0",
]
